// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Component Mount with favorites 1`] = `
<div
  className="sc-iwsKbI hHseNu"
>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Favorite Files
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      >
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 43 56"
            width={30}
          >
            <path
              d="M29 0H1.463C.655 0 0 .655 0 1.926v52.611C.009 55.246.655 56 1.463 56h40.074c.808 0 1.453-.709 1.463-1.463V10L29 0z"
              fill="#ebeff3"
            />
            <circle
              cx={639}
              cy={571}
              fill="#ffd900"
              r={6}
              transform="translate(-629 -561)"
            />
            <ellipse
              cx={646.5}
              cy={569}
              fill="#87c7ff"
              rx={3.5}
              ry={3}
              transform="translate(-624.5 -551.143)"
            />
            <ellipse
              cx={648.5}
              cy={566.429}
              fill="#87c7ff"
              rx={3.5}
              ry={2.571}
              transform="translate(-623 -551.286)"
            />
            <ellipse
              cx={650}
              cy={570.429}
              fill="#87c7ff"
              rx={3}
              ry={2.571}
              transform="translate(-623 -551)"
            />
            <ellipse
              cx={654}
              cy={568.571}
              fill="#87c7ff"
              rx={3}
              ry={2.571}
              transform="translate(-624 -551.286)"
            />
            <path
              d="M0 39l12-18 7.999 10.857L32 16l11 14v9H0z"
              fill="#3d4d65"
            />
            <path
              d="M29 0l14 10-12 2-2-12z"
              fill="#8393A7"
            />
            <path
              d="M41.537 56H1.463A1.463 1.463 0 0 1 0 54.537V39h43v15.537c0 .808-.655 1.463-1.463 1.463z"
              fill="red"
            />
            <text
              fill="#fff"
              style={
                Object {
                  "fontSize": "15px",
                  "fontWeight": "bold",
                  "letterSpacing": "1px",
                  "textTransform": "uppercase",
                }
              }
              text-anchor="middle"
              x="21.5"
              y="53"
            >
              png
            </text>
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2F"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              Screenshot_2018-08-09 SDU-eScience SDUCloud-1.png
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FAABA"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              AABA
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FFavorites"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              Favorites
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FJobs"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              Jobs
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FA%20folder%20the%20sequel"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              A folder the sequel
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FB"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              B
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2Frehjoerijhoerijh"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              rehjoerijhoerijh
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FTest"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              Test
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2Fsomefolder-60D6DAD4-DCF1-415E-B4D6-9BCEF028369E"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              somefolder-60D6DAD4-DCF1-415E-B4D6-9BCEF028369E
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2Fsomefolder-24ACCA0C-2FAA-4B6C-8F31-7F1E633A54DB"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM fAKqce"
              fontSize={2}
              width={200}
            >
              somefolder-24ACCA0C-2FAA-4B6C-8F31-7F1E633A54DB
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <svg
            className="sc-gzVnrw fCUJrO"
            clipRule="evenodd"
            cursor="pointer"
            fill="currentcolor"
            fillRule="evenodd"
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 23"
            width={24}
          >
            <path
              d="M12 0l3.708 7.514L24 8.719l-6 5.848 1.416 8.259-7.416-3.9-7.417 3.9L6 14.567 0 8.72l8.292-1.205L12 0z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recently used files
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recent Jobs
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No results found
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gSegVV"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recent notifications
      </h4>
      <div
        className="sc-bdVaJa bFsHEP"
      />
      <svg
        className="sc-gzVnrw gCVALd"
        clipRule="evenodd"
        color2="#8393A7"
        cursor="pointer"
        fill="currentcolor"
        fillRule="evenodd"
        height={24}
        m="5px"
        onClick={[Function]}
        title="Mark all as read"
        viewBox="0 0 24 14"
        width={24}
      >
        <g>
          <path
            d="M10.6 12l1.4 1.4 12-12L22.6 0l-12 12z"
            fill="#8393A7"
            fillRule="nonzero"
          />
          <path
            d="M5.6 10.6L1.4 6.4 0 7.8l5.6 5.6 12-12L16.2 0 5.6 10.6z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No notifications
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard Component Mount with recent files 1`] = `
<div
  className="sc-iwsKbI hHseNu"
>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Favorite Files
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No favorites found
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recently used files
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      >
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 43 56"
            width={30}
          >
            <path
              d="M29 0H1.463C.655 0 0 .655 0 1.926v52.611C.009 55.246.655 56 1.463 56h40.074c.808 0 1.453-.709 1.463-1.463V10L29 0z"
              fill="#ebeff3"
            />
            <circle
              cx={639}
              cy={571}
              fill="#ffd900"
              r={6}
              transform="translate(-629 -561)"
            />
            <ellipse
              cx={646.5}
              cy={569}
              fill="#87c7ff"
              rx={3.5}
              ry={3}
              transform="translate(-624.5 -551.143)"
            />
            <ellipse
              cx={648.5}
              cy={566.429}
              fill="#87c7ff"
              rx={3.5}
              ry={2.571}
              transform="translate(-623 -551.286)"
            />
            <ellipse
              cx={650}
              cy={570.429}
              fill="#87c7ff"
              rx={3}
              ry={2.571}
              transform="translate(-623 -551)"
            />
            <ellipse
              cx={654}
              cy={568.571}
              fill="#87c7ff"
              rx={3}
              ry={2.571}
              transform="translate(-624 -551.286)"
            />
            <path
              d="M0 39l12-18 7.999 10.857L32 16l11 14v9H0z"
              fill="#3d4d65"
            />
            <path
              d="M29 0l14 10-12 2-2-12z"
              fill="#8393A7"
            />
            <path
              d="M41.537 56H1.463A1.463 1.463 0 0 1 0 54.537V39h43v15.537c0 .808-.655 1.463-1.463 1.463z"
              fill="red"
            />
            <text
              fill="#fff"
              style={
                Object {
                  "fontSize": "15px",
                  "fontWeight": "bold",
                  "letterSpacing": "1px",
                  "textTransform": "uppercase",
                }
              }
              text-anchor="middle"
              x="21.5"
              y="53"
            >
              png
            </text>
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2F"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              Screenshot_2018-08-09 SDU-eScience SDUCloud-1.png
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FAABA"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              AABA
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FFavorites"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              Favorites
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FJobs"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              Jobs
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FA%20folder%20the%20sequel"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              A folder the sequel
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FB"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              B
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2Frehjoerijhoerijh"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              rehjoerijhoerijh
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2FTest"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              Test
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2Fsomefolder-60D6DAD4-DCF1-415E-B4D6-9BCEF028369E"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              somefolder-60D6DAD4-DCF1-415E-B4D6-9BCEF028369E
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-jzJRlG kzvOTf"
            clipRule="evenodd"
            cursor="inherit"
            fillRule="evenodd"
            height={30}
            viewBox="0 0 24 22"
            width={30}
          >
            <path
              d="M0 21.313c0 .378.27.687.6.687h22.8c.33 0 .6-.309.6-.687v-16.5c0-.378-.27-.688-.6-.688H10.8L7.2 0H.6C.27 0 0 .31 0 .688v20.625z"
              fill="#8393A7"
              fillRule="nonzero"
            />
          </svg>
          <a
            className="sc-hMqMXs iJbUXx"
            color="text"
            hoverColor="textHighlight"
            href="/files?path=%2Fhome%2Fuser%40user.telecity%2Fsomefolder-24ACCA0C-2FAA-4B6C-8F31-7F1E633A54DB"
            ml="0.5em"
            onClick={[Function]}
          >
            <div
              className="sc-EHOje sc-bZQynM dUBznq"
              fontSize={2}
              width={130}
            >
              somefolder-24ACCA0C-2FAA-4B6C-8F31-7F1E633A54DB
            </div>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <div
            className="sc-EHOje kmIRlQ"
            color="grey"
            cursor="inherit"
            fontSize={1}
          >
            49 years ago
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recent Jobs
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No results found
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gSegVV"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recent notifications
      </h4>
      <div
        className="sc-bdVaJa bFsHEP"
      />
      <svg
        className="sc-gzVnrw gCVALd"
        clipRule="evenodd"
        color2="#8393A7"
        cursor="pointer"
        fill="currentcolor"
        fillRule="evenodd"
        height={24}
        m="5px"
        onClick={[Function]}
        title="Mark all as read"
        viewBox="0 0 24 14"
        width={24}
      >
        <g>
          <path
            d="M10.6 12l1.4 1.4 12-12L22.6 0l-12 12z"
            fill="#8393A7"
            fillRule="nonzero"
          />
          <path
            d="M5.6 10.6L1.4 6.4 0 7.8l5.6 5.6 12-12L16.2 0 5.6 10.6z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No notifications
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard Component Mount with recent files 2`] = `
<div
  className="sc-iwsKbI hHseNu"
>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Favorite Files
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No favorites found
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recently used files
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gOAKSv"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recent Jobs
      </h4>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <div
        className="sc-bdVaJa fIHEhA"
      />
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      >
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-gzVnrw dnCABv"
            cursor="inherit"
            fill="currentcolor"
            height="1.5em"
            pr="0.3em"
            viewBox="0 0 24 24"
            width="1.5em"
          >
            <path
              d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
            />
          </svg>
          <a
            className="sc-hMqMXs kzhqpI"
            color="text"
            hoverColor="textHighlight"
            href="/applications/results/bbcf5395-e78e-4fa7-a4e1-989fe5ce21ee"
            onClick={[Function]}
          >
            <span
              className="sc-EHOje cKKZzB"
              cursor="inherit"
              fontSize={2}
            >
              figlet-count
            </span>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <span
            className="sc-EHOje cKKZzB"
            cursor="inherit"
            fontSize={2}
          >
            Failure
          </span>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-gzVnrw dnCABv"
            cursor="inherit"
            fill="currentcolor"
            height="1.5em"
            pr="0.3em"
            viewBox="0 0 24 24"
            width="1.5em"
          >
            <path
              d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
            />
          </svg>
          <a
            className="sc-hMqMXs kzhqpI"
            color="text"
            hoverColor="textHighlight"
            href="/applications/results/15274bec-ef72-4ed2-97ff-2be1829a2db1"
            onClick={[Function]}
          >
            <span
              className="sc-EHOje cKKZzB"
              cursor="inherit"
              fontSize={2}
            >
              figlet
            </span>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <span
            className="sc-EHOje cKKZzB"
            cursor="inherit"
            fontSize={2}
          >
            Failure
          </span>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-gzVnrw dnCABv"
            cursor="inherit"
            fill="currentcolor"
            height="1.5em"
            pr="0.3em"
            viewBox="0 0 24 24"
            width="1.5em"
          >
            <path
              d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
            />
          </svg>
          <a
            className="sc-hMqMXs kzhqpI"
            color="text"
            hoverColor="textHighlight"
            href="/applications/results/3544b177-e9a7-4323-bcde-c4d6e442dc36"
            onClick={[Function]}
          >
            <span
              className="sc-EHOje cKKZzB"
              cursor="inherit"
              fontSize={2}
            >
              figlet
            </span>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <span
            className="sc-EHOje cKKZzB"
            cursor="inherit"
            fontSize={2}
          >
            Failure
          </span>
        </div>
        <div
          className="sc-ifAKCX fdcbWa"
        >
          <svg
            className="sc-gzVnrw fCnTSl"
            cursor="inherit"
            fill="currentcolor"
            height="1.5em"
            pr="0.3em"
            viewBox="0 0 24 24"
            width="1.5em"
          >
            <path
              d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
            />
          </svg>
          <a
            className="sc-hMqMXs kzhqpI"
            color="text"
            hoverColor="textHighlight"
            href="/applications/results/e28defb0-d66c-4461-91f6-b09afd85480c"
            onClick={[Function]}
          >
            <span
              className="sc-EHOje cKKZzB"
              cursor="inherit"
              fontSize={2}
            >
              figlet-count
            </span>
          </a>
          <div
            className="sc-bdVaJa bFsHEP"
          />
          <span
            className="sc-EHOje cKKZzB"
            cursor="inherit"
            fontSize={2}
          >
            Success
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bdVaJa sc-dnqmqq jxVBPm"
    height="auto"
    style={
      Object {
        "overflow": "hidden",
      }
    }
    width={290}
  >
    <div
      className="sc-ifAKCX gSegVV"
      color="darkGray"
    >
      <h4
        className="sc-EHOje iCzVTA"
        cursor="inherit"
        fontSize={3}
      >
        Recent notifications
      </h4>
      <div
        className="sc-bdVaJa bFsHEP"
      />
      <svg
        className="sc-gzVnrw gCVALd"
        clipRule="evenodd"
        color2="#8393A7"
        cursor="pointer"
        fill="currentcolor"
        fillRule="evenodd"
        height={24}
        m="5px"
        onClick={[Function]}
        title="Mark all as read"
        viewBox="0 0 24 14"
        width={24}
      >
        <g>
          <path
            d="M10.6 12l1.4 1.4 12-12L22.6 0l-12 12z"
            fill="#8393A7"
            fillRule="nonzero"
          />
          <path
            d="M5.6 10.6L1.4 6.4 0 7.8l5.6 5.6 12-12L16.2 0 5.6 10.6z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </div>
    <div
      className="sc-bdVaJa dnoybz"
    >
      <h6
        className="sc-EHOje iDMxJR"
        cursor="inherit"
        fontSize={0}
      >
        No notifications
      </h6>
      <div
        className="sc-bdVaJa sc-gipzik vTxWL"
        fontSize="large"
      />
    </div>
  </div>
</div>
`;
